feat: add auth resource, update api.yaml
