# src/recources/auth/dto/auth-login.dto.ts
@@ -1,0 +1,11 @@
+import { IsNotEmpty, IsString } from "class-validator";
+
+export class AuthLoginDto {
+    @IsString()
+    @IsNotEmpty()
+    login: string;
+  
+    @IsString()
+    @IsNotEmpty()
+    password: string;
+}
