# src/recources/auth/dto/auth-signup.dto.ts
@@ -1,0 +1,11 @@
+import { IsNotEmpty, IsString } from "class-validator";
+
+export class AuthSignupDto {
+    @IsString()
+    @IsNotEmpty()
+    login: string;
+  
+    @IsString()
+    @IsNotEmpty()
+    password: string;
+}
